# wr_tracker

./: README.md  pyproject.toml
.github/workflows/: lint.yml
docs/source/.github/workflows/: lint.yml
src/: data.py  main_ui.py  results.json  ui_utils.py  utils.py
src/assets/: icons.py
src/to_db/: data.py  main.py  matches.db  printing.py
tests/: generate_data.py
