[project]
name = "wr-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mypy>=1.19.1",
    "nicegui>=3.6.1",
    "pylint>=3.3.9",
    "pywebview>=6.2.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.1.0",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.34",
]
